--- a/model/B-Systerel/Event_B/Subset_026_comm_session/latex/subset_3_5.tex
+++ b/model/B-Systerel/Event_B/Subset_026_comm_session/latex/subset_3_5.tex
@@ -24,10 +24,11 @@
 \newcommand{\btype}[1]{\btext{#1}}
 \newcommand{\bguard}[1]{\btext{#1}}
 
-\author{Matthias Güdemann}
+\author{Matthias Güdemann\\Systerel, France}
 
 \title{Event-B model of Subset 026, Section 3.5.3}
 
+\date{}
 
 \begin{document}
 
@@ -121,8 +122,74 @@ succeeding machines to incorporate the different stages of the protocol to
 establish a session. The contexts further refine the entities to on-track and
 on-board entities and limit the modeling to the point of view of an OBU.
 
+The machine $m1$ discerns incoming and outgoing communication sessions, i.e.,
+initiated by the modeled piece of equipment or by an external one. The context
+$c1$ introduces the different types of equipment which are used in $m2$ to
+refine the two different protocols for outgoing and incoming sessions and to
+limit the model to the OBU point of view. $c2$ introduces the notion of
+compatible systems. This is used in $m3$ to identify on-track equipment with a
+compatible system version. This machine also discerns between accepting and
+non-accepting RBCs to contact. $c3$ adds the different ERTMS levels and the
+relevant train modes to the model. This is used in $m4$ to model the different
+situations where a communication session must be established. $m5$ adds the
+notion of safe radio connection as low-level prerequisite for a communication
+session to the model.
+
+All external actions, e.g., mode changes by the driver or train level changes
+are modeled via events. Only events can modify the variables of a machine. An
+Event-B model is on the system level, events are assumed to be called from a
+software system into which the functional model is embedded. The guards of the
+events assure that any event can only be called when appropriate, e.g., a
+communication session will not be established before an EURORADIO connection
+exists.
+
+The representation of the state machines of the modeled protocols for
+establishing a communication session is modeled implicitly. The model allows
+sessions with different partners in parallel (but respects the constraints of
+the specification like §3.5.3.5.2). The state of the protocol with different
+partners is tracked by adding / removing these partners from sets representing
+those different states of the protocol.
+
+\section{Model Highlights}
+\label{sec:model-highlights}
+
+The Event-B model in Rodin has some interesting properties which are highlighted
+here. Some stem from the fact that Rodin is well integrated into the Eclipse
+platform which renders many useful plugins available, both those explicitly
+developed for integration with Rodin, but also other without Rodin in mind.
+Other interesting properties stem from the fact that Rodin and Event-B provide
+an extensive proof support for properties.
+
+\begin{itemize}
+\item {\bf Refinement} The Event-B approach allows iterative development based
+  on refinement. This allows starting modeling with a very abstract machine and
+  then step-wise adding more detailed behavior. Rodin generates all the
+  necessary proof obligations which are required to assure correct refinement.
+\item {\bf Requirements Tracing} Rodin provides an extensible EMF model,
+  therefore it is easily possible to trace requirements using the requirements
+  modeling framework of Eclipse (RMF) via the ProR plugin. This allows the usage
+  of requirement documents in the OMG standardized Requirements Interchange
+  Format (ReqIF).
+\item {\bf Model Animation} The Event-B model can be animated via different
+  plugins, e.g., ProB or AnimB. This allows the simulation of the model, by
+  clicking on the activated events and tracking the resulting state of the
+  variables. This technique allows to apply the defined test cases to the model.
+\item {\bf Non-Testable Requirements} The Event-B model supports the
+  specification of invariants which can be formally proven using the Rodin's
+  proof support. This includes for example some of the non-testable requirements
+  of Subset 076.
+\item {\bf Safety Properties} Using Rodin's proof support and the formalization
+  as invariants, it is possible to formalize and prove the identified safety
+  properties for the case study.
+\end{itemize}
+
 \section{Detailed Model Description}
 \label{sec:deta-model-descr}
+
+This section describes in detail the formal model, beginning from the most
+abstract Event-B machine. In general only the important changes will be shown,
+as the complete model is available as a Rodin project. At each step the
+additional modeled functionality will be described.
 
 \subsection{Context 0 - Entities}
 \label{sec:context-0-entities}
@@ -138,9 +205,149 @@ modeled.
 
 This abstract state machine represents the basic functionality. Its allows
 for the creation and the destruction of a communication session with another
-entity.
+entity. The respective events are triggered with a parameter $l\_partner$ which
+represents the potential communication partner.
+
+\begin{itemize}
+\item each session allows for communication between two entities (cf. §3.5.2.1)
+\end{itemize}
 
 \input{m0_basic_comm}
+
+\subsection{Machine 1 - Directional Communication}
+\label{sec:mach-1-direct}
+
+The first refinement of the machine refines the notion of communication session
+to incoming sessions, i.e., where another entity establishes a session with
+$my\_entity$ and outgoing sessions where $my\_entity$ establishes the session.
+
+The data refinement is proven by the invariant which state that the union of
+outgoing and incoming sessions is equal to the communication sessions and that
+the intersection of the sets of incoming and outgoing session is empty. The
+abstract ``establish\_session'' event is refined to the two events
+``incoming\_session'' and ``outgoing\_session''.
+
+\input{m1_directional_communication}
+
+\subsection{Context 1 - Entity Types}
+\label{sec:context-1-entity}
+
+The first context extension introduces the different types of entities relevant
+for this requirement subset, i.e., OBU, RIU, RBC. It restricts the type of
+$my\_entity$ to OBU and adds the distinction between on-track and on-board
+entities.
+
+\input{c1_entity_types}
+
+\subsection{Machine 2 - On Board Modeling}
+\label{sec:machine-2-board}
+
+The next machine refinement adds the notion of being contacted by an on-track
+entity to establish a communication session. It also adds the first state of the
+communication session establishing protocol, i.e., entities which are contacted
+with the ``Initiation of a communication session'' message.
+
+The invariants prove that $my\_entity$ will only be in contact with on-track
+entities and that any entities which are considered for a communication session
+are on-track entities. Any entity with whom there is already a communication
+session will not be considered for another session, and finally no radio in-fill
+unit can initiate a communication session with $my\_entity$.
+
+\begin{itemize}
+\item It shall be possible for OBU and RBC to initiate communication session
+  (cf. §3.5.3.1)
+\item RIU cannot initiate a communication session (cf. §3.5.3.2)
+
+This invariant is marked as ``non-testable'' in Subset-076.
+\end{itemize}
+
+The other invariants ensure that a communication partner is not in different
+states of the communication protocol at the same time. A session protocol can be
+started by the order to contact an RBC or directly by the OBU.
+
+\input{m2_limit_OBU}
+
+\subsection{Context 2 - System Version Compatibility}
+\label{sec:context-2-system}
+
+The next context extension introduces the notion of compatible system
+versions. This is considered to be a static property of the on-track equipment,
+wrt. $my\_entity$, therefore this is modeled as a context axiom.
+
+\input{c2_system_version_mode}
+
+\subsection{Machine 3 - Accepting RBC and System Version}
+\label{sec:machine-3-accepting}
+
+The next machine refines the contact order events by discerning between the
+orders to contact an accepting or non-accepting RBC. The notion of being an
+accepting RBC is considered to be a dynamic property and therefore modeling as a
+variable.
+
+Furthermore, a just established communication session with on-track equipment
+with an incompatible system version will be terminated immediately after
+receiving this information.
+
+\begin{itemize}
+\item In case of a non-accepting RBC, all existing communication sessions with
+  other RBCs must be terminated (cf. §3.5.3.5.2)
+\item After the system version  is received by the OBU, the communication
+  session is considered established and (cf. §3.5.3.8)
+  \begin{itemize}
+  \item if the system version is compatible, the OBU shall send the session
+    established message to track-side (cf. 3.5.3.8.a)
+  \item if the system version is incompatible, the OBU shall terminate the
+    session (cf. 3.5.3.8.b)
+  \end{itemize}
+\item Any RBC which is contacted and with whom a communication session is
+  established has a compatible system version (safety requirement from
+  requirements document).
+\end{itemize}
+
+\input{m3_accept_system_version}
+
+\subsection{Context 3 - ERTMS Level}
+\label{sec:context-3-ertms}
+
+The third context introduces the notion of the different ERTMS level. It also
+introduces the notion of start of mission, end of mission and the rather
+abstract while mission, i.e., anything between start and end of the current
+train mission.
+
+\input{c3_ERTMS_level}
+
+
+\subsection{Machine 4 - ERTMS Level Changes}
+\label{sec:machine-4-ertms}
+
+The next refined machine implements mainly the different causes for establishing
+a communication session. For this the current ERTMS level of the train is
+tracked, as well as its current mission status. The indication of a level
+change, a mission status change, a manual level change and an announced radio
+hole is modeled by events which modify corresponding indicator variables to
+signal a change and the variables which represent the current state. E.g., there
+is a ``current\_mode'' variable a the corresponding ``signal\_level\_change''
+variable.
+
+\begin{itemize}
+\item The on-board shall establish a communication session (cf. §3.5.3.4)
+  \begin{itemize}
+  \item at start of mission (only if level 2 or 3) (cf. §3.5.3.4.a)
+  \item if ordered from trackside (cf. §3.5.3.4.b)
+  \item If a mode change, not considered as an End of Mission, has to be
+    reported to the RBC (only if level 2 or 3) (cf. §3.5.3.4.c)
+  \item If the driver has manually changed the level to 2 or 3 (cf. §3.5.3.4.d)
+  \item When the train front reaches the end of an announced radio hole
+    (cf. §3.5.3.4.e)
+  \end{itemize}
+\end{itemize}
+
+\input{m4_level_changes}
+
+\subsection{Machine 5 - Safe Radio Connection}
+\label{sec:machine-5-safe}
+
+\input{m5_safe_radio}
 
 \end{document}
 
