added ReqIfinRodin figure

--- a/model/B-Systerel/Event_B/Subset_026_comm_session/latex/subset_3_5.tex
+++ b/model/B-Systerel/Event_B/Subset_026_comm_session/latex/subset_3_5.tex
@@ -214,7 +214,14 @@ an extensive proof support for properties.
   therefore it is easily possible to trace requirements using the requirements
   modeling framework of Eclipse (RMF) via the ProR plugin. This allows the usage
   of requirement documents in the OMG standardized Requirements Interchange
-  Format (ReqIF).
+  Format (ReqIF). Figure~\ref{fig:traceability-pror} shows the requirements
+  tracing using ProR in Rodin.
+  \begin{figure}[ht]
+    \centering
+    \includegraphics[width=\textwidth]{ReqIfinRodin}
+    \caption{Traceability in ReqIf file using ProR}
+    \label{fig:traceability-pror}
+  \end{figure}
 \item {\bf Model Animation} The Event-B model can be animated via different
   plugins, e.g., ProB or AnimB. This allows the simulation of the model, by
   clicking on the activated events and tracking the resulting state of the
