add source files

--- a/model/EA-SysML/doc/model.bib
+++ b/model/EA-SysML/doc/model.bib
@@ -7,7 +7,19 @@ title = {{Papyrus}},
 url = {http://www.eclipse.org/papyrus/},
 year = {2011}
 }
-
+@techreport{D2-5,
+abstract = {This document is the deliverable of the WP2 D2.5 task, it defines the subset of SRS SUBSET-026 that should be used to evaluate formal modelling tools.},
+author = {Mentre, David and Pinte, Stanislas and Pottier, Guillaume},
+file = {:home/cecile/biblio/Mentre, Pinte, Pottier - 2012 - D2.5 Methods and tools benchmarking methodology.pdf:pdf},
+institution = {ITEA2 openETCS consortium},
+keywords = {D3.1,OpenETCS,WP2,openetcs},
+mendeley-tags = {D3.1,OpenETCS,WP2},
+number = {March},
+pages = {1--24},
+title = {{D2.5 Methods and tools benchmarking methodology}},
+url = {https://github.com/openETCS/requirements/tree/master/D2.5},
+year = {2012}
+}
 @misc{SysML,
 author = {{Object Management Group}},
 howpublished = {\url{http://www.omgsysml.org}},
@@ -18,9 +30,35 @@ title = {{OMG Systems Modeling Language (OMG SysML\textsuperscript{TM})}},
 url = {www.omgsysml.org},
 year = {2012}
 }
+@misc{ocl2012,
+abstract = {This specification defines the Object Constraint Language (OCL), version 2.3.1. OCL version 2.3.1 is the latest version of OCL that is aligned with UML 2.3 and MOF 2.0.},
+author = {{Object Management Group (OMG)}},
+file = {:home/cecile/biblio/Object Management Group (OMG) - 2012 - OMG Object Constraint Language ( OCL ).pdf:pdf},
+keywords = {D3.1,OCL},
+mendeley-tags = {D3.1},
+number = {January},
+pages = {1--246},
+title = {{OMG Object Constraint Language ( OCL )}},
+url = {http://www.omg.org/spec/OCL/2.3.1/PDF},
+volume = {03},
+year = {2012}
+}
+@article{Peleska2011,
+author = {Peleska, Jan and Vorobev, Elena and Lapschies, Florian},
+file = {:home/cecile/biblio/Peleska, Vorobev, Lapschies - 2011 - Automated test case generation with SMT-solving and abstract interpretation.pdf:pdf},
+journal = {NASA Formal Methods},
+keywords = {D3.1},
+mendeley-tags = {D3.1},
+number = {1},
+pages = {298--312},
+title = {{Automated test case generation with SMT-solving and abstract interpretation}},
+url = {http://www.springerlink.com/index/CHK5807226826652.pdf},
+year = {2011}
+}
 @techreport{rttmbtreport2011,
 author = {Peleska, Jan and Vorobev, Elena and Lapschies, Florian and Zahlten, Cornelia},
-howpublished = {\url{http://www.informatik.uni-bremen.de/agbs/testingbenchmarks/turn_indicator/tool/rtt-mbt.pdf}},
+howpublished =
+{\url{http://www.informatik.uni-bremen.de/agbs/testingbenchmarks/turn$\backslash$\_indicator/tool/rtt-mbt.pdf}},
 institution = {Universit\"{a}t Bremen},
 keywords = {D3.1},
 mendeley-tags = {D3.1},
@@ -36,28 +74,13 @@ title = {{Enterprise Architecture}},
 url = {www.sparxsystems.com},
 year = {2009}
 }
-@techreport{D2-5,
-abstract = {This document is the deliverable of the WP2 D2.5 task, it defines the subset of SRS SUBSET-026 that should be used to evaluate formal modelling tools.},
-author = {Mentre, David and Pinte, Stanislas and Pottier, Guillaume},
-file = {:home/cecile/biblio/Mentre, Pinte, Pottier - 2012 - D2.5 Methods and tools benchmarking methodology.pdf:pdf},
-institution = {ITEA2 openETCS consortium},
-keywords = {D3.1,OpenETCS,WP2,openetcs},
-mendeley-tags = {D3.1,OpenETCS,WP2},
-number = {March},
-pages = {1--24},
-title = {{D2.5 Methods and tools benchmarking methodology}},
-url = {https://github.com/openETCS/requirements/tree/master/D2.5},
-year = {2012}
-}
-@inproceedings{Peleska2011,
-author = {Peleska, Jan and Vorobev, Elena and Lapschies, Florian},
-file = {:home/cecile/biblio/Peleska, Vorobev, Lapschies - 2011 - Automated test case generation with SMT-solving and abstract interpretation.pdf:pdf},
-journal = {NASA Formal Methods},
-keywords = {D3.1},
-mendeley-tags = {D3.1},
-number = {1},
-pages = {298--312},
-title = {{Automated test case generation with SMT-solving and abstract interpretation}},
-url = {http://www.springerlink.com/index/CHK5807226826652.pdf},
-year = {2011}
-}
+
+@INPROCEEDINGS{PnueliLTL1977,
+author={Pnueli, Amir},
+booktitle={Foundations of Computer Science, 1977., 18th Annual Symposium on}, title={The temporal logic of programs},
+year={31 1977-Nov. 2},
+pages={46-57},
+abstract={A unified approach to program verification is suggested, which applies to both sequential and parallel programs. The main proof method suggested is that of temporal reasoning in which the time dependence of events is the basic concept. Two formal systems are presented for providing a basis for temporal reasoning. One forms a formalization of the method of intermittent assertions, while the other is an adaptation of the tense logic system Kb, and is particularly suitable for reasoning about concurrent programs.},
+keywords={Clocks;Logic;Operating systems;Power system modeling;Programming profession;Real time systems;Reasoning about programs;Safety;Stress;System recovery},
+doi={10.1109/SFCS.1977.32},
+ISSN={0272-5428},}
